--- a/package.json
+++ b/package.json
@@ -13,16 +13,19 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.6.2",
+    "async": "^3.2.2",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
+    "reduce-reducers": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
     "@react-native-community/eslint-config": "^2.0.0",
+    "@types/async": "^3.2.10",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
     "@types/react-test-renderer": "^17.0.1",
