--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "promise.allsettled": "^1.0.5",
     "react": "17.0.2",
     "react-native": "0.66.3",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-redux": "^7.2.6",
