--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.6.2",
     "async": "^3.2.2",
+    "intl": "^1.2.5",
     "promise.allsettled": "^1.0.5",
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-vector-icons": "^9.0.0",
     "react-redux": "^7.2.6",
     "reduce-reducers": "^1.0.4"
   },
@@ -30,6 +32,7 @@
     "@types/async": "^3.2.10",
     "@types/jest": "^26.0.23",
     "@types/react-native": "^0.66.4",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "^17.0.1",
     "babel-jest": "^26.6.3",
     "eslint": "^7.14.0",
